--- a/styles.css
+++ b/styles.css
@@ -26,3 +26,29 @@ p {
     font-size: 22px;
     line-height: 1.5;
 }
+
+li {
+    font-size: 20px;
+}
+
+footer p {
+    font-size: 16px;
+}
+
+/* article header p {
+    font-style: italic;
+} */
+
+#author {
+    font-style: italic;
+    font-size: 18px;
+}
+
+.related-author {
+    font-size: 18;
+    font-weight: bold;
+}
+
+.related {
+    list-style: none;
+}
