--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,22 @@
-body {
+h1, h1, h3, h4, p, li {
     font-family: sans-serif;
+    color: #444444;
+}
+
+h1, h2, h3 {
+    color: #1098ad;
 }
 
 h1 {
     font-size: 26px;
     text-transform: uppercase;
     font-style: italic;
+    
 }
 
 h2 {
     font-size: 40px;
+    font-family: sans-serif;
 }
 
 h3 {
@@ -52,3 +59,17 @@ footer p {
 .related {
     list-style: none;
 }
+
+ header {
+    background-color: #f7f7f7;
+ }
+
+ aside {
+    background-color: #f7f7f7;
+    border-top: 5px solid #1098ad;
+    border-bottom: 5px solid #1098ad;
+ }
+
+ body {
+    /* background-color: orange; */
+ }
